--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
     "title": "Landing Page",
     "name": "startbootstrap-landing-page",
     "version": "5.0.6",
-    "browserslist": ["last 2 versions"],
+    "browserslist": [
+        "last 2 versions"
+    ],
     "scripts": {
         "start": "node_modules/.bin/gulp watch",
         "build": "gulp"
